fixing layout problem in example

--- a/example/example.css
+++ b/example/example.css
@@ -47,7 +47,7 @@ h1,h2,h3,h4,h5,h6{
     overflow-x: hidden;
 }
 .wideContainer{
-    width:600px;
+    width:650px;
 }
 .heading{
     clear: both;
